perf tools: Convert to LIBPYTHON_SUPPORT
For building perf without python scripting, we can set NO_LIBPYTHON=1
as a argument of make.  It then defines NO_LIBPYTHON macro for C code
to do the proper handling.  However it usually used in a negative
semantics - e.g. #ifndef - so we saw double negations which can be
misleading.  Convert it to a positive form to make it more readable.
Also add _SUPPORT suffix for consistency.

Signed-off-by: Namhyung Kim <namhyung@kernel.org>

--- a/tools/perf/Makefile
+++ b/tools/perf/Makefile
@@ -624,7 +624,6 @@ endif
 
 disable-python = $(eval $(disable-python_code))
 define disable-python_code
-  BASIC_CFLAGS += -DNO_LIBPYTHON
   $(if $(1),$(warning No $(1) was found))
   $(warning Python support won't be built)
 endef
@@ -684,6 +683,7 @@ else
           $(warning $(and ,))
           $(error   $(and ,))
         else
+          BASIC_CFLAGS += -DLIBPYTHON_SUPPORT
           ALL_LDFLAGS += $(PYTHON_EMBED_LDFLAGS)
           EXTLIBS += $(PYTHON_EMBED_LIBADD)
           LIB_OBJS += $(OUTPUT)util/scripting-engines/trace-event-python.o
